# Motivi-Ai

./: .env.example  .gitignore  .gptree_config  AGENTS.md  BUGFIX_TIMEZONE.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  IMPORTANT_FIX.md  OPTIMIZATION_TOKENS.md  README.md  README_FIXES.md  alembic.ini  docker-compose.yml  gptree_output.txt  pyproject.toml
alembic/: env.py
alembic/versions/: 16c8dbaee964_add_created_at_fields_to_core_memory_.py  20251204_add_core_fact_table.py  20251212_vector_4096.py  20260128_add_vector_indexes.py  20260226_add_user_triggers.py  20260228_add_search_news_digest_settings.py  20260304_add_integrity_sig_columns.py  (+32 more)
app/: config.py  db.py  main.py
docker/: app.Dockerfile  mcp.Dockerfile  sandbox.Dockerfile
docs/: ALEMBIC.md  ARCHITECTURE_RECOMMENDATIONS.md  BEHAVIORAL_DESIGN_ROADMAP.md  VECTOR_DIMENSIONS.md  infra_telegram_vpn_proxy.md
mcp_server/: config.py  main.py  schemas.py
reports/: 00_conductor_briefing.md
scripts/: backfill_encrypted_columns.py  backfill_integrity_signatures.py  check_db_url.py  generate_data_keyset.py  init_schema.sql  migrate_core_text_to_core_fact.py  run_weekly_summary.py  test_weekly_plan.py
singbox/: config.json.example
tests/: conftest.py  test_habit_service.py  test_job_manager.py  test_memory_orchestrator_and_core_memory.py  test_profile_completeness.py  test_row_integrity.py  test_scheduler_and_encryption.py  test_scheduler_reminder_tool.py  test_subscription_payments.py  test_telegram_mtproto_utils.py  test_userbot_monitor_filters.py  test_userbot_thread_service.py  test_working_memory_entries.py
(+134 files in other folders)
